--- a/files/nginx.conf.tmpl
+++ b/files/nginx.conf.tmpl
@@ -20,7 +20,7 @@ http {
 
     include /etc/nginx/conf.d/*.conf;
 
-    location / {
+    location ##RESTRICTED_END_POINT## {
       proxy_pass ##PROXY_PASS##;
       auth_basic "Restricted";
       auth_basic_user_file /etc/nginx/.htpasswd;
@@ -28,6 +28,10 @@ http {
       proxy_set_header X-Forwarded-Host $host;
       # Do not pass Authorization header to destination
       proxy_set_header Authorization "";
+    }
+
+    location / {
+      proxy_pass ##PROXY_PASS##;
     }
   }
 
