--- a/files/nginx.conf.tmpl
+++ b/files/nginx.conf.tmpl
@@ -11,6 +11,11 @@ events {
 http {
   access_log /dev/stdout;
 
+   map $http_upgrade $connection_upgrade {
+    default upgrade;
+    ''      close;
+  }
+
   server {
     listen ##PORT##;
     server_name ##SERVER_NAME##;
@@ -31,7 +36,20 @@ http {
     }
 
     location / {
+      add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+
+      add_header Content-Security-Policy "default-src 'self'; connect-src *; script-src * www.google.com www.gstatic.com 'unsafe-eval' 'unsafe-inline'; style-src * 'unsafe-inline' fonts.googleapis.com code.getmdl.io; font-src * fonts.gstatic.com fonts.googleapis.com; form-action 'self'; frame-src * www.google.com; img-src * data:";
+
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+
       proxy_pass ##PROXY_PASS##;
+
+      # WebSocket proxying - from http://nginx.org/en/docs/http/websocket.html
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection $connection_upgrade;
     }
   }
 
